# mdsys

./: .gitignore  CMakeLists.txt  Packages  README.md  Release  _push.sh  index.html
.github/workflows/: release.yml
arch/: mdsys-0.2.4-1-x86_64.pkg.tar.zst  mdsys.db  mdsys.db.tar.gz.old  mdsys.files  mdsys.files.tar.gz.old
packaging/arch/: PKGBUILD
pool/main/: mdsys_0.2.0_amd64.deb  mdsys_0.2.1_amd64.deb  mdsys_0.2.2_amd64.deb  mdsys_0.2.3_amd64.deb  mdsys_0.2.4_amd64.deb  mdsys_0.2.5_amd64.deb
rpm/: mdsys-0.2.4-1.x86_64.rpm  mdsys-0.2.5-1.x86_64.rpm
rpm/repodata/: 078ec7e5c104ee19cc3beba279ce0220d3ea0e61cbd42aa9614d1fd31755bc55-other.sqlite.bz2  4b7c9c4cc7171ab383d92c7b7b68cb458b4a3476f41aca92d7b1fa323cbe9b47-filelists.sqlite.bz2  507c2f37e245b9b864a2ce48a58047dc725e2c74982d788abfe75e86badb7987-other.sqlite.bz2  533ae00a47bdeb2ac96484e706a2d02b3d6578c35cd73b338547d14c7b6f62a1-filelists.sqlite.bz2  6175d2e2c2ed5f1e655673fccc051b3ea35de2b6bfba928d43af4ee627cd4190-primary.sqlite.bz2  630e79404464a5f3a8aec619a088fa07fa25d625b173a4717e2b64ba2d88ac34-primary.sqlite.bz2  77e48b53f580d0d7c100bd5f9c345ce592361af0d764d319f740c63d0a58dad2-primary.sqlite.bz2  a4369bfa93d1edb764409500f8e7595caabc63b9cee903feb3aca60715bd8907-other.sqlite.bz2  a50e851a037049fda99b2bd84aabeca5bc258b451a7664dc2ada33f6a99c9cef-filelists.sqlite.bz2  repomd.xml
src/: main.cpp
